K8sConfig/AuthorizationAPI.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-api-deployment
  labels:
    app: authorization-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization-api
  template:
    metadata:
      labels:
        app: authorization-api
    spec:
      containers:
      - name: authorization-api
        image: retur/authorization_api:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: authorization-api-service
spec:
  type: NodePort
  selector:
    app: authorization-api
  ports:
    - protocol: TCP
      port: 30901
      targetPort: 80
      nodePort: 30901
