K8sConfig/ChatAPI.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-api-deployment
  labels:
    app: chat-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-api
  template:
    metadata:
      labels:
        app: chat-api
    spec:
      containers:
      - name: chat-api
        image: retur/chat_api:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: chat-api-service
spec:
  type: ClusterIP
  selector:
    app: chat-api
  ports:
    - protocol: TCP
      name: "82"
      port: 82
      targetPort: 80
