K8sConfig/PostAPI.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-api-deployment
  labels:
    app: post-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: post-api
  template:
    metadata:
      labels:
        app: post-api
    spec:
      containers:
      - name: post-api
        image: retur/post_api:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: post-api-service
spec:
  type: ClusterIP
  selector:
    app: post-api
  ports:
    - protocol: TCP
      name: "80"
      port: 80
      targetPort: 80
