K8sConfig/RabbitMQ.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 15672
        - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      name: "15672"
      port: 15672
      targetPort: 15672
      nodePort: 31672
    - protocol: TCP
      name: "5672"
      port: 5672
      targetPort: 5672
      nodePort: 30672
