K8sConfig/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: localhost
    port: 9999
    http:
      paths:
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: user-api-service
            port:
              number: 81
      - path: /api/post
        pathType: Prefix
        backend:
          service:
            name: post-api-service
            port:
              number: 80
      - path: /api/chat
        pathType: Prefix
        backend:
          service:
            name: chat-api-service
            port:
              number: 82
